--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -40,30 +40,30 @@ annex.14.c:0 "No, we will recreate an old idea..."
 annex.15.t:0 "An old idea made new"
 annex.15.d:0 "1848년 프랑크푸르트 회의는 게르만 국가들의 운명을 결정지었습니다. 1871년에는 비스마르크가 독일을 통일했습니다. 1914년에는 협상국을 짓밟았습니다. 그리고 이제 우리는 마침내 마지막 독일 형제들을 쇠퇴의 굴레에서 해방시켰습니다! 대독일제국이여, 영원하라!"
 annex.15.a:0 "대독일제국이여, 영원하라!"
-annex.16.t:0 "Integration of Austria"
-annex.16.d:0 "We've controlled Austria for some time now, and it seems like the local population have finally accepted our rule."
-annex.16.a:0 "Hand it over to our Italian allies!"
-annex.16.b:0 "Release Italy!"
-annex.16.c:0 "Hand it over to our Austrian friends!"
-annex.17.t:0 "The Annexation of Austrian Italy"
-annex.17.d:0 "We have taken control of the Austrian-occupied parts of Italy and we need to decide what do we do with it..."
-annex.17.a:0 "Return these lands to our Italian allies!"
-annex.17.b:0 "Let us create a loyal Italian puppet!"
-annex.17.c:0 "Hand it over to our Austrian friends!"
-annex.17.e:0 "Give Istria to Slovenia and the rest to Austria"
-annex.18.t:0 "Territories regained!"
-annex.18.d:0 "Our loyal allies have returned us the lands taken by the vile Austrians! This is a great day for the Italian people!"
+annex.16.t:0 "오스트리아 통합"
+annex.16.d:0 "오스트리아를 일정 기간 지배하였고, 지역 주민들이 드디어 우리의 통치를 받아들이기 시작한 것 같습니다."
+annex.16.a:0 "동맹국 이탈리아에게 넘긴다!"
+annex.16.b:0 "이탈리아 해방!"
+annex.16.c:0 "맹우 오스트리아에 넘긴다!"
+annex.17.t:0 "오스트리아령 이탈리아 합병"
+annex.17.d:0 "오스트리아가 점령한 이탈리아 지역을 점령하였고 이 땅을 어떻게 해야할지 정해야합니다."
+annex.17.a:0 "동맹국 이탈리아에게 넘겨준다!"
+annex.17.b:0 "충성스런 이탈리아 괴뢰국을 만든다!"
+annex.17.c:0 "맹우 오스트리아에 넘긴다!"
+annex.17.e:0 "이스트리아를 슬로베니아에 할양하고 나머지는 오스트리아에 할양한다"
+annex.18.t:0 "영토 수복!"
+annex.18.d:0 "충성스런 동맹국이 비열한 오스트리아인들에게 빼앗긴 땅을 우리에게 돌려주었습니다. 오늘은 이탈리아 국민들의 최고의 날입니다!"
 annex.18.a:0 "우라!"
-annex.19.t:0 "Integration of Austrian Italy"
-annex.19.a:0 "The territories of Austrian Italy have finally become part of our nation!"
+annex.19.t:0 "오스트리아령 이탈리아의 통합"
+annex.19.a:0 "오스트리아령 이탈리아 지역은 마침내 우리 국가의 일부가 되었습니다!"
 annex.20.t:0 "크로아티아 합병"
-annex.20.d:0 "The Croats are now taking their orders from us, the way things should be. There is some resistance among them, but it will be crushed under our heels!"
+annex.20.d:0 "크로아티아인들은 이제 우리 명령을 듣습니다. 아직 일부 저항 세력이 남아있지만, 우리 군홧발에 짓밟힐 것입니다!"
 annex.21.t:0 "슬로베니아 합병"
-annex.21.d:0 "Our troops are marching through the capital of Slovenia and the country finally bowed before our might. We must decide what to do with it."
+annex.21.d:0 "우리 군대는 슬로베니아 수도를 행진하고 있으며 정부는 우리 힘 앞에 무릎 꿇었습니다. 이제 이들을 어떻게 할지 결정해야합니다."
 annex.22.t:0 "폴란드 합병"
-annex.22.d:0 "Our soldiers are marching through the streets of Warsaw after the Polish army surrendered early yesterday afternoon."
-annex.22.b:0 "These damn poles never give up..."
-annex.22.c:0 "Annex border strip and liberate Poland"
+annex.22.d:0 "폴란드군은 어제 이른 오후 항복했으며, 우리 군대는 바르샤바를 행진하고 있습니다."
+annex.22.b:0 "저 망할 폴란드놈들은 포기하지 않는군..."
+annex.22.c:0 "폴란드 국경 지대를 병합한 뒤 폴란드를 해방한다"
 annex.22.e:0 "Try to win over the Hearts and Minds of the Poles!"
 annex.22.f:0 "Strip Poland of its conquests"
 annex.23.t:0 "Integration of Poland"
