--- a/Kaiserreich Korean Translation/localisation/KR_Flavour_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flavour_l_english.yml
@@ -2,24 +2,24 @@
 
 
 ### Events ###
-entf.1.t:0 "John R.R. Tolkien: The Downfall of Númenor"
-entf.1.d:0 "The Allwen and Unwin publishing house today released a new book by the South African author J.R.R. Tolkien. The Downfall of Númenor tells the story of the destruction of the mystical island Kingdom of Númenor, who set out to free the continent of Middle Earth from the reign of the dark lord Sauron, but in the end fell victim to it's own weakness and corruption, and the Gods sank their proud island beneath the uncaring waves of the sea. Only a small bad of men still loyal to the Gods were able to flee the cataclysm of the sinking island, to found new realms in distant lands. Professor Tolkien denies that his book was inspired by the British and French postwar revolutions, and states that the initial ideas for this story and others ,set in the same world of Middle Earth, came to him during his time as a soldier in the trenches of France."
-entf.1.a:0 "A fascinating book"
-entf.2.t:0 "John R.R. Tolkien: The Downfall of Númenor"
-entf.2.d:0 "The Allwen and Unwin publishing house today released a new book by the South African author J.R.R. Tolkien. The Downfall of Númenor tells the story of the destruction of the mystical island Kingdom of Númenor, who set out to free the continent of Middle Earth from the reign of the dark lord Sauron, but in the end fell victim to it's own weakness and corruption, and the Gods sank their proud island beneath the uncaring waves of the sea. Only a small bad of men still loyal to the Gods were able to flee the cataclysm of the sinking island, to found new realms in distant lands. Professor Tolkien denies that his book was inspired by the British and French postwar revolutions, and states that the initial ideas for this story and others ,set in the same world of Middle Earth, came to him during his time as a soldier in the trenches of France."
-entf.2.a:0 "A fascinating book"
-entf.3.t:0 "Rudyard Kipling dies"
-entf.3.d:0 "British author Rudyard Kipling died today in Delhi, at 70. A staunch supporter of colonialism, the author of The Jungle Book, Kim, If and The Man Who Would Be King had left Britain after the Revolution to return to his native India. His only regret was to not being able to return to his native town of Bombay, now in hands of the hostile Princely Federation."
-entf.3.a:0 "The British Empire mourns a great writer"
-entf.4.t:0 "Charles Nicolle dies"
-entf.4.d:0 "French bacteriologist Charles Nicolle died today in Tunis at 69. Director of the Pasteur Institute in Tunis, where he stayed after the Great War, he studied there the transmission of epidemic typhus, eventually discovering that lice were responsible for it. Along with his works on Malta and tick fevers, this earned him the Nobel Prize for Medicine in 1928."
-entf.4.a:0 "We should spread typhus on the Communards!"
-entf.5.t:0 "Gilbert K. Chesterton dies"
-entf.5.d:0 "British writer Gilbert Keith Chesterton died today in his exile in Ottawa, at 62. A prolific author whose most-known novel is certainly The Man Who Was Thursday, he was a devout Roman Catholic and a Christian apologist, two reasons that forced him to leave England to avoid persecution after the Syndicalist Revolution."
-entf.5.a:0 "The Prince of Paradox died"
-entf.6.t:0 "Jacques Bainville dies"
-entf.6.d:0 "French historian Jacques Bainville died today in Algiers. A follower of Charles Maurras who he followed in Africa, he was mostly known for his accurate descriptions of foreign policies."
-entf.6.a:0 "A great patriot died today"
-entf.7.t:0 "Edmund Allenby dies"
-entf.7.d:0 "General Allenby died today in his exile at Ottawa, aged 75. Retired since 1925, he was mostly known as the commander-in-chief of the British expeditionary forces in the Middle East. After achieving major victories thanks to Arab help, such as taking Jerusalem, he was forced to withdraw as the Great War went bad for England. By honouring him with state funerals, King Edward VIII wants to show his desire for revenge."
-entf.7.a:0 "A war hero died today"
+entf.1.t:0 "존 R.R. 톨킨: 누메노르의 몰락"
+entf.1.d:0 "앨윈 앤드 언윈 출판사가 남아프리카 출신 작가 J.R.R. 톨킨의 새 책을 오늘 출판했습니다. 누메노르의 몰락은 신비로운 섬 누메노르 왕국의 파멸과 어둠의 군주 사우론의 지배로부터 가운데땅의 대륙을 해방시키는 이들의 이야기입니다. 그러나 이야기의 결말에서 희생자들은 나약해지고 타락하고 맙니다. 그리고 신들은 그들의 자랑거리와 같았던 섬을 바다의 무정한 물결 아래 가라앉혀버립니다.  오직 죄가 적어 신의 가호를 받은 인물들만이 침몰하는 섬의 재앙으로부터 벗어날 수 있었습니다. 그리고 머나먼 땅을 찾아 새 나라를 세우게 되죠. 톨킨 교수는 책의 내용이 영국과 프랑스가 전후에 겪은 혁명과는 무관함을 밝혔으며, 국가가 서적의 바탕이 된 사상과 관련이 있다는 설을 일축했습니다. 다만 가운데땅의 세계관을 창작하는데 프랑스의 참호전에서 종군한 사실이 도움이 된 것은 맞는 것 같습니다."
+entf.1.a:0 "놀라운 책이다"
+entf.2.t:0 "존 R.R. 톨킨: 누메노르의 몰락"
+entf.2.d:0 "앨윈 앤드 언윈 출판사가 남아프리카 출신 작가 J.R.R. 톨킨의 새 책을 오늘 출판했습니다. 누메노르의 몰락은 신비로운 섬 누메노르 왕국의 파멸과 어둠의 군주 사우론의 지배로부터 가운데땅의 대륙을 해방시키는 이들의 이야기입니다. 그러나 이야기의 결말에서 희생자들은 나약해지고 타락하고 맙니다. 그리고 신들은 그들의 자랑거리와 같았던 섬을 바다의 무정한 물결 아래 가라앉혀버립니다.  오직 죄가 적어 신의 가호를 받은 인물들만이 침몰하는 섬의 재앙으로부터 벗어날 수 있었습니다. 그리고 머나먼 땅을 찾아 새 나라를 세우게 되죠. 톨킨 교수는 책의 내용이 영국과 프랑스가 전후에 겪은 혁명과는 무관함을 밝혔으며, 국가가 서적의 바탕이 된 사상과 관련이 있다는 설을 일축했습니다. 다만 가운데땅의 세계관을 창작하는데 프랑스의 참호전에서 종군한 사실이 도움이 된 것은 맞는 것 같습니다."
+entf.2.a:0 "놀라운 책이다"
+entf.3.t:0 "러디어드 키플링 타계"
+entf.3.d:0 "영국인 작가 러디어드 키플링이 일흔의 나이로, 오늘 델리에서 사망했습니다. 제국주의의 열렬한 신봉자이자 소설 정글 북, 킴, 왕이 되려던 사나이의 저자였던 그는 혁명 이후 브리튼 섬을 떠나 고향 인도로 돌아갔습니다. 그가 남긴 마지막 회한은 태어난 뭄바이의 마을로 돌아가는 것이었습니다. 이제 그는 적국 번왕국 연방의 품으로 갔습니다."
+entf.3.a:0 "대영제국은 대문호를 애도할 것이다"
+entf.4.t:0 "샤를 니콜 타계"
+entf.4.d:0 "프랑스의 세균학자 샤를 니콜이 예순아홉의 나이로, 오늘 튀니지에서 사망했습니다. 튀니지 파스퇴르 연구소장이었던 그는 대전쟁 이후에도 남아 전염병 티푸스의 전파를 연구했습니다. 결국 진드기가 원인이었음을 밝혀냈습니다. 몰타에 창궐하던 진드기열을 종식시킨 공로로 1928년 노벨 의학상을 수상했습니다."
+entf.4.a:0 "공산주의자 놈들을 티푸스로 쓸어버려야 해!"
+entf.5.t:0 "길버트 K. 체스터턴 타계"
+entf.5.d:0 "영국의 작가 길버트 키스 체스터턴이 예순둘의 나이로, 망명지 오타와에서 오늘 사망했습니다. 다작으로 유명했던 그는 소설 목요일이었던 남자로 널리 알려져 있습니다. 독실한 가톨릭 신자이자 옹호자였습니다. 노동조합주의자들의 혁명에서 이루어진 종교 박해로 인해 그는 잉글랜드를 떠날 수 밖에 없었습니다."
+entf.5.a:0 "역설의 왕자가 세상을 떠났다"
+entf.6.t:0 "자크 뱅빌 타계"
+entf.6.d:0 "프랑스의 역사가 자크 뱅빌이 알제리에서 오늘 사망했습니다. 아프리카에서부터 샤를 모라스의 추종자이길 자처했던 그. 유명한 저작으로는 외교 정책에 대한 평론이 있었습니다."
+entf.6.a:0 "위대한 애국자가 돌아가셨다"
+entf.7.t:0 "에드먼드 앨런비 타계"
+entf.7.d:0 "앨런비 장군이 1925년 전역한 이래 일흔다섯의 나이로, 망명지 오타와에서 오늘 사망했습니다. 중동의 영국 원정대를 이끈 총사령관으로 유명합니다. 아랍을 도우며 쟁취한 숱한 승리, 예루살렘 탈환의 업적. 그는 대전쟁 이후 잉글랜드에서 쫓겨났습니다. 장례식은 예우를 담아 국장으로 치루어질 것이며, 국왕 에드워드 8세는 고인의 염원이었던 복수를 다짐했습니다."
+entf.7.a:0 "전쟁 영웅이 돌아가셨다"
