--- a/Kaiserreich Korean Translation/localisation/KR_Chinese_Republic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Chinese_Republic_l_english.yml
@@ -1,39 +1,39 @@
 ﻿l_english:
 
 ### Focuses ###
-CHI_army_effort:0 "Army Effort"
+CHI_army_effort:0 "육군 개선"
 CHI_army_effort_desc:0 "Despite the increasing possibilities of aerial and naval warfare, ground combat is still key in tomorrow's wars. With preparation, we can avoid reliving the hell of the trenches."
-CHI_equipment_effort:0 "Equipment Effort"
+CHI_equipment_effort:0 "장비 개선"
 CHI_equipment_effort_desc:0 "The limits for what equipment can be carried by infantry are constantly being pushed. We will focus on giving our troops the best tools available."
-CHI_motorization_effort:0 "Motorisation Effort"
+CHI_motorization_effort:0 "차량화 개선"
 CHI_motorization_effort_desc:0 "Mobility and protection are crucial to get infantry into and out of the field safely. Focusing on these developments will allow us to take action quickly."
-CHI_doctrine_effort:0 "Doctrine Effort"
+CHI_doctrine_effort:0 "교리 개선"
 CHI_doctrine_effort_desc:0 "The military doctrines that defined ground combat in the Great War are outdated. We must put our greatest minds to the task of shaping the military thought of tomorrow."
-CHI_equipment_effort_2:0 "Equipment Effort II"
+CHI_equipment_effort_2:0 "장비 개선 II"
 CHI_equipment_effort_2_desc:0 "We will continue our efforts to ensure our infantry and support troops are armed with the best possible equipment of our time."
-CHI_mechanization_effort:0 "Mechanisation Effort"
+CHI_mechanization_effort:0 "기계화 개선"
 CHI_mechanization_effort_desc:0 "Rethinking the possibilities of motorised infantry, we can push the limits of what vehicles can be constructed today."
-CHI_doctrine_effort_2:0 "Doctrine Effort II"
+CHI_doctrine_effort_2:0 "교리 개선 II"
 CHI_doctrine_effort_2_desc:0 "The battlefield has changed not just in the interbellum years, but over the course of recent conflicts. We must continuously reevaluate our doctrines to reflect this."
-CHI_equipment_effort_3:0 "Equipment Effort III"
+CHI_equipment_effort_3:0 "장비 개선 III"
 CHI_equipment_effort_3_desc:0 "Instead of imitating or buying foreign equipment, we should aim to become world-leading in infantry weapons."
-CHI_armor_effort:0 "Armour Effort"
+CHI_armor_effort:0 "기갑 개선"
 CHI_armor_effort_desc:0 "Applying what we have learned from mechanising our infantry, we can improve our armoured vehicles as well."
-CHI_special_forces:0 "Special Forces"
+CHI_special_forces:0 "특수 부대"
 CHI_special_forces_desc:0 "We have need of elite forces; mountain troops and paratroopers should be our priority."
 
-CHI_aviation_effort:0 "Aviation Effort"
+CHI_aviation_effort:0 "항공 개선"
 CHI_aviation_effort_tt:0 "Not enough building slots for §YAir Base§!"
 CHI_aviation_effort_desc:0 "Nowhere is technological advances more rapid than in aerial warfare. Aviation is a field any modern nation must master."
-CHI_fighter_focus:0 "Fighter Focus"
+CHI_fighter_focus:0 "전투기 중점"
 CHI_fighter_focus_desc:0 "We have not seen that last of dogfights in the Great War. Keeping ahead in the development of fighter planes will give us an edge in the future."
-CHI_bomber_focus:0 "Bomber Focus"
+CHI_bomber_focus:0 "폭격기 중점"
 CHI_bomber_focus_desc:0 "When people of the future speak of the horror to today's wars, fire raining from the skies will prominently feature. We will do our best to ensure those stories are told by our enemies."
-CHI_aviation_effort_2:0 "Aviation Effort II"
+CHI_aviation_effort_2:0 "항공 개선 II"
 CHI_aviation_effort_2_desc:0 "Further advances in aviation will be necessary to integrate our air force well with other branches of the military."
-CHI_CAS_effort:0 "CAS Effort"
+CHI_CAS_effort:0 "근접항공지원기 개선"
 CHI_CAS_effort_desc:0 "A modern army needs support from vehicles not only on the ground, but also in the air."
-CHI_rocket_effort:0 "Rocket Effort"
+CHI_rocket_effort:0 "로켓 개선"
 CHI_rocket_effort_desc:0 "Rocket and jet engines allow for unprecedented speeds for unmanned and manned vessels alike. Pioneering these technologies will allow us to take the enemy by surprise."
 CHI_NAV_effort:0 "NAV Effort"
 CHI_NAV_effort_desc:0 "Just as the new naval warfare takes place in part beneath the water's surface, part of it takes place in the air above the waters."
@@ -128,30 +128,30 @@ chinese_arms:0 "Funded Activities in Nanjing"
 five_races_united:0 "Five Races United"
 
 ### Parties ###
-CHI_totalist_party:0 "CCP"
-CHI_totalist_party_long:0 "Chinese Communist Party Totalist faction"
-CHI_radical_socialist_party:0 "CCP"
-CHI_radical_socialist_party_long:0 "Chinese Communist Party Socialist faction"
-CHI_syndicalist_party:0 "CCP"
-CHI_syndicalist_party_long:0 "Chinese Communist Party Syndicalist faction"
-CHI_social_democrat_party:0 "Leftist KMT"
-CHI_social_democrat_party_long:0 "Leftist Kuomintang"
-CHI_social_liberal_party:0 "KMT"
-CHI_social_liberal_party_long:0 "Kuomintang"
-CHI_market_liberal_party:0 "Liberals"
-CHI_market_liberal_party_long:0 "Chinese Liberal Party"
-CHI_social_conservative_party:0 "Rightist KMT"
-CHI_social_conservative_party_long:0 "Rightist Kuomintang"
-CHI_authoritarian_democrat_party:0 "YCP"
-CHI_authoritarian_democrat_party_long:0 "Young China Party"
+CHI_totalist_party:0 "중국 공산당"
+CHI_totalist_party_long:0 "중국 공산당 전체주의 팩션"
+CHI_radical_socialist_party:0 "중국 공산당"
+CHI_radical_socialist_party_long:0 "중국 공산당 사회주의 팩션"
+CHI_syndicalist_party:0 "중국 공산당"
+CHI_syndicalist_party_long:0 "중국 공산당 노조주의 팩션"
+CHI_social_democrat_party:0 "좌익 국민당"
+CHI_social_democrat_party_long:0 "좌익 국민당"
+CHI_social_liberal_party:0 "국민당"
+CHI_social_liberal_party_long:0 "국민당"
+CHI_market_liberal_party:0 "자유당"
+CHI_market_liberal_party_long:0 "중국 자유당"
+CHI_social_conservative_party:0 "우익 국민당"
+CHI_social_conservative_party_long:0 "우익 국민당"
+CHI_authoritarian_democrat_party:0 "중국 청년당"
+CHI_authoritarian_democrat_party_long:0 "중국 청년당"
 CHI_paternal_autocrat_party:0 "QRP"
 CHI_paternal_autocrat_party_long:0 "Qing Restoration Party"
 CHI_national_populist_party:0 "NPA"
 CHI_national_populist_party_long:0 "National Protection Alliance"
 
 ### Opinion Modifiers ###
-CHI_SQI_ALL:0 "We're Allies"
-AOG_REQ_HELP:0 "A.O.G. requested our help"
+CHI_SQI_ALL:0 "우리는 동맹이다"
+AOG_REQ_HELP:0 "A.O.G.가 우리의 도움을 요청했다."
 GER_NO_HELP_AOG:0 "We will not help the A.O.G."
 GER_HELP_AOG:0 "We will help the A.O.G."
 CCW_HELP_REP_GER:0 "They help Republican China"
@@ -159,106 +159,106 @@ CCW_HELP_REP_CHI:0 "They help Us"
 CCW_NO_HELP_REP_GER:0 "They don't help Republican China"
 CCW_NO_HELP_REP_CHI:0 "They don't help Us"
 CHI_EXP_GER_FAC:0 "Expropriated German companies"
-GER_DEM_FIN_COMP:0 "Germany demanded financial compensation"
-GER_HOLD_TSINGAU:0 "We still hold Tsingau"
-CHI_COMP_GER:0 "China compensate Germany"
-CHI_CONT_WAR:0 "We will continue the War"
+GER_DEM_FIN_COMP:0 "독일은 금전적 배상을 요구한다"
+GER_HOLD_TSINGAU:0 "우린 아직 싱가우가 있다"
+CHI_COMP_GER:0 "중국은 독일에 배상한다"
+CHI_CONT_WAR:0 "우리는 계속 싸운다"
 CHI_STRONG_POL:0 "The Qing reinforces their police forces"
 CHI_ANN_LEC_80:0 "China annexes the Legation Cities"
 CHI_ANN_LEC_40:0 "China annexes the Legation Cities"
 CHI_NO_ANN_LEC:0 "China doesn't annex the Legation Cities"
-LEC_CHI_PUPP:0 "They are our Master"
+LEC_CHI_PUPP:0 "그들은 우리의 주인이다"
 CHI_PUP_LEC_20:0 "China puppets the Legation Cities"
 CHI_PUP_LEC_10:0 "China puppets the Legation Cities"
-GER_REF_PROT:0 "Germany won't help Us"
-JAP_SUPP_MAN_Plebiscite:0 "Japan support the Manchurian Plebiscite"
-JAP_NO_SUPP_MAN_Plebiscite:0 "Japan don't support the Manchurian Plebiscite"
-FNG_Pebiscite:0 "Plebiscite"
-Plebiscite_Go:0 "The Plebiscite is going on"
-Plebiscite_Go_FNG:0 "The Plebiscite is going on"
-Plebiscite_no_Need:0 "The Plebiscite is not needed"
-Plebiscite_manipulated:0 "The Plebiscite was manipulated"
-Respected_pact:0 "China honour the pact"
-RUS_not_want_transsiberian:0 "Russia doesn't want any pact with us"
-russo_chinese_all_broken:0 "Russo-Chinese Alliance broken"
-russo_chinese_all:0 "Russo_Chineese Alliance continues on"
-CHI_CLAIMS_MACAU:0 "China claim Macao"
-CHI_NO_CLAIMS_MACAU:0 "China doesn't claims Macao"
+GER_REF_PROT:0 "독일이 우리를 도와주지 않을 것입니다"
+JAP_SUPP_MAN_Plebiscite:0 "일본이 만주인 국민투표를 지지한다"
+JAP_NO_SUPP_MAN_Plebiscite:0 "일본이 만주인 국민투표를 지지하지 않는다"
+FNG_Pebiscite:0 "국민투표"
+Plebiscite_Go:0 "국민투표는 계속된다"
+Plebiscite_Go_FNG:0 "국민투표는 계속된다"
+Plebiscite_no_Need:0 "국민투표는 필요치않다"
+Plebiscite_manipulated:0 "국민투표는 조작됬다"
+Respected_pact:0 "중국은 협정을 존중한다"
+RUS_not_want_transsiberian:0 "러시아는 우리와 어떤 협정도 원치 않는다"
+russo_chinese_all_broken:0 "러시아-중국 동맹은 깨졌다"
+russo_chinese_all:0 "러시아-중국 동맹은 계속된다"
+CHI_CLAIMS_MACAU:0 "중국은 마카오를 요구한다"
+CHI_NO_CLAIMS_MACAU:0 "중국은 마카오를 요구하지 않는다"
 
 ### Events ###
-repchi.1.t:0 "The Changsha Revolution"
-repchi.1.d:0 "Horrible news! The people of Changsha and Nanchang have taken up arms. The rebels have hoisted a Five-Colour Flag over the Capital buildings of the Nanchang and Changde Provinces."
-repchi.1.a:0 "We will crush them!"
-repchi.2.t:0 "The Wuchang Revolution"
+repchi.1.t:0 "창사 혁명"
+repchi.1.d:0 "끔찍하군! 창사와 난창의 시민들을 무기를 차지했고 도둑맞은 오색기를 난창과 창더 지방의 중앙청에 계양했다"
+repchi.1.a:0 "그들을 박살내자!"
+repchi.2.t:0 "우창 혁명"
 repchi.2.d:0 ".Nobody sees this event."
 repchi.2.a:0 "Republican China Fights For The Chinese Worker's livelihood!"
-repchi.3.t:0 "The Republican Government"
+repchi.3.t:0 "공화국 정부"
 repchi.3.d:0 "The instigators have emerged from hiding, but they already control most of the region."
-repchi.3.a:0 "We will crush the Rebels! Stability must be restored!"
+repchi.3.a:0 "우리는 반란군을 박살내고 안정을 되찾아야 한다!"
 repchi.4.t:0 "The Shangqing Offer"
 repchi.4.d:0 "The Shangqing traditionalists have offered us an alliance to secure China for the Chinese, this might benefit both of us, but we shall see what happens in the end."
-repchi.4.a:0 "China for the Chinese!"
+repchi.4.a:0 "중국인들을 위한 중국!"
 repchi.4.b:0 "Send them away"
-repchi.5.t:0 "The Second Chinese revolution"
+repchi.5.t:0 "2차 중국 혁명"
 repchi.5.d:0 "Eruption of revolution across the southern China has brought our board of directors and entire southern China into chaos. Many members of the board of directors are not even sure, if we can hold against this revolution for a more than a few days given unreliability of the most of our armed forces, which are mostly composed of Chinese, which are definitively."
 repchi.5.a:0 "Officially request German Empire for aid!"
-repchi.5.b:0 "We shall destroy this revolution on our own!"
-repchi.6.t:0 "A.O.G. requests military assistance"
+repchi.5.b:0 "우리는 우리 스스로 이 혁명을 진압할 것이다!"
+repchi.6.t:0 "A.O.G.는 군사 지원을 요청했다"
 repchi.6.d:0 "Eruption of revolution across the southern China has brought A.O.G. administering southern China and its armed forces into chaos. Scared with recent development, the A.O.G. board of directors are requesting immediate military assistance in quelling this uprising."
 repchi.6.a:0 "Refuse such absurd demand!"
-repchi.6.b:0 "Sent requested aid"
-repchi.7.t:0 "German expeditionary forces arrive"
+repchi.6.b:0 "요청된 지원을 보냈다"
+repchi.7.t:0 "독일 원정대가 도착하다"
 repchi.7.d:0 "The German Empire accepted our request at military assistance and send us an expeditionary force, which should help us destroy pathetic republican uprising."
-repchi.7.a:0 "Great!"
-repchi.8.t:0 "The End of the Chinese revolution"
+repchi.7.a:0 "좋았어!"
+repchi.8.t:0 "중국 혁명의 끝"
 repchi.8.d:0 "For good or ill, the Chinese revolution is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 repchi.8.a:0 "Great!"
-repchi.9.t:0 "The Second Chinese revolution"
+repchi.9.t:0 "2차 중국 혁명"
 repchi.9.d:0 "The Chinese people discontent with corporativist leadership of the German A.O.G. and oppression they present have launched a revolution, aimed against German presence in China. This present us with an great option to weaken German influence in the southern China and ultimately in Pacific as whole."
 repchi.9.a:0 "Send aid to the new republican government!"
-repchi.9.b:0 "We cannot do anything."
-repchi.10.t:0 "Russian volunteers arrive"
+repchi.9.b:0 "우린 아무것도 할 수 없다"
+repchi.10.t:0 "러시아 자원병이 도착하다"
 repchi.10.d:0 "The Russian state has decided to support our struggle against German oppressors with steady flow of military material and volunteers, eager to see Germans defeated."
-repchi.10.a:0 "Great!"
-repchi.11.t:0 "The End of the Chinese revolution"
+repchi.10.a:0 "좋았어!"
+repchi.11.t:0 "중국 혁명의 끝"
 repchi.11.d:0 "For good or ill, the Chinese revolution is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 repchi.11.a:0 "Great!"
-repchi.12.t:0 "The Second Chinese revolution"
+repchi.12.t:0 "2차 중국 혁명"
 repchi.12.d:0 "The Chinese people discontent with the corporatist leadership of the German A.O.G. and the oppression it represent, have launched a revolution, aimed against German presence in China. This present us with an great option to weaken German influence in the southern China and ultimately in the Pacific as whole."
-repchi.12.a:0 "Send aid to the new republican government!"
-repchi.12.b:0 "We cannot do anything."
-repchi.13.t:0 "Soviet Volunteers Arrive"
+repchi.12.a:0 "신 공화국 정부에 지원을 보내라!"
+repchi.12.b:0 "우린 아무것도 할 수 없다"
+repchi.13.t:0 "소비에트 자원병이 도착하다"
 repchi.13.d:0 "The Soviet state has decided to support our struggle against German oppression with a steady flow of military material and volunteers, eager to see the Germans defeated."
 repchi.13.a:0 "Great!"
 repchi.14.t:0 "The End of the Chinese revolution"
 repchi.14.d:0 "For good or ill, the Chinese revolution is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 repchi.14.a:0 "Great!"
-repchi.15.t:0 "The Second Chinese Revolution"
+repchi.15.t:0 "중국 혁명의 끝"
 repchi.15.d:0 "The Chinese people discontent with the corporatist leadership of the German A.O.G. and the oppression it represent, have launched a revolution, aimed against German presence in China. This present us with an great option to weaken German influence in the southern China and ultimately in the Pacific as whole."
 repchi.15.a:0 "Send aid to the new republican government!"
 repchi.15.b:0 "We cannot do anything."
-repchi.16.t:0 "Japanese Volunteers Arrive"
+repchi.16.t:0 "일본 자원병이 도착하다"
 repchi.16.d:0 "The Empire of Japan state has decided to support our struggle against the German oppressors with a steady flow of military material and volunteers, eager to see the Germans defeated."
-repchi.16.a:0 "Great!"
-repchi.17.t:0 "The End of the Chinese Revolution"
+repchi.16.a:0 "좋았어!"
+repchi.17.t:0 "중국 혁명의 끝"
 repchi.17.d:0 "For good or ill, the Chinese revolution is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 repchi.17.a:0 "Great!"
-repchi.18.t:0 "The Second Chinese Revolution"
+repchi.18.t:0 "2차 중국 혁명"
 repchi.18.d:0 "The Chinese people discontent with corporatist leadership of the German A.O.G. and the oppression they represent has launched a revolution, aimed against German presence in China. Even if a weakening of German presence in China is welcomed by parts of our government, the rise of a hostile republican government to the south as well as a diminished German military presence in Asia is definitively against our interests. As a result, some members of cabinet propose we send aid to the A.O.G."
 repchi.18.a:0 "Send aid to the A.O.G. board of directors!"
 repchi.18.b:0 "Us help German colonials? Never going to happen!"
-repchi.19.t:0 "Qing Expeditionary Forces"
+repchi.19.t:0 "청 원정대"
 repchi.19.d:0 "The Qing Empire has decided to support our struggle against revolutionary scum with a steady flow of supplies and in the form of an expeditionary force, which should help us destroy this pathetic republican uprising."
 repchi.19.a:0 "He's all-right that Pu Yi fellow!"
-repchi.20.t:0 "The End of the Chinese revolution"
+repchi.20.t:0 "중국 혁명의 끝"
 repchi.20.d:0 "For good or ill, the Chinese revolution is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 repchi.20.a:0 "Great!"
 repchi.21.t:0 "The Seat of Republican Governance"
 repchi.21.d:0 "Thanks to the successes of the National Revolution, all of China between the Three Rivers is now firmly under Republican control. Thus it is now time to cement our authority and right to rule by proclaiming a new permanent seat of government for the great Chinese Republic."
-repchi.21.a:0 "Nanjing will serve as the binding knot between North and South!"
-repchi.21.b:0 "Beijing is a prime location where from we can take Manchuria!"
+repchi.21.a:0 "난징은 북쪽과 남쪽 사이를 묶는 매듭 역할을 할 것이다!"
+repchi.21.b:0 "베이징은 우리가 만주를 되찾을 수 있는 중요 위치입니다!"
 repchi.21.c:0 "Guangzhou on the Pearl River will be the home of the Government!"
-repchi.22.t:0 "The Election of the Six Provinces"
+repchi.22.t:0 "6개 지역의 선거"
 repchi.22.d:0 "The German A.O.G. has been dismantled and the Provisional Republican Government of China has asserted its influence over the six southern Chinese provinces. However, The Revolution is not over yet and the Provisional Government is just that - provisional. Before we can launch any expeditions of unification we need to define which party will lead us and China in the fulfilment of Sun Yat-sen's legacy."
 repchi.22.a:0 "Soong Ching-ling and Zhou Shuren's Leftist Kuomintang"
 repchi.22.b:0 "Hu Shi's Liberals Secure a Majority!"
@@ -370,7 +370,7 @@ repchi.45.b:0 "We have no need for those ports"
 repchi.46.t:0 "The Chinese Vultures"
 repchi.46.d:0 "Dire news have reached our officials in Tsingtau. The president of the Chinese Republic has demanded our surrender of the German territories in Shandong and at the Qiongzhou Strait."
 repchi.46.a:0 "Niemals! Attack"
-repchi.46.b:0 "Wir kapitulieren."
+repchi.46.b:0 "우리는 항복한다"
 repchi.47.t:0 "The German Eagle Defends Herself"
 repchi.47.d:0 "Our ultimatum has been rebuffed by the German Kaiser, it seems as if we will have to skew the German colonies on our bayonets!"
 repchi.47.a:0 "The Chinese dragon will tear them apart!"
@@ -410,7 +410,7 @@ repchi.55.b:0 "As we brought down the Boxers so we shall crush them too!"
 repchi.56.t:0 "Double Ten Day"
 repchi.56.d:0 "Today, the tenth day of the tenth month is the anniversary of the 1911 Xinhai Uprising. Posters of Dr. Sun Yat-sen and other revolutionaries decorate the streets of Guangzhou and beyond whilst the people cheer the lion and dragon dancers parading under the five coloured flag. Today, our Republic is truly united!"
 repchi.56.a:0 "We celebrate in the honour of the fallen!"
-repchi.57.t:0 "Civil War!"
+repchi.57.t:0 "내전!"
 repchi.57.d:0 "The Heavenly Crusade to purify China has entered a critical stage where our troops will have to fight the stubborn plutocrats of Canton. Although fellow Chinese, their refusal to submit to the Path of Consistence has spelled doom over their puny attempt at state-crafting. There can be only one China!"
 repchi.57.a:0 "The Path of Consistence shall triumph!"
 repchi.58.t:0 "The Manchurian Plebiscite"
