--- a/Kaiserreich Korean Translation/localisation/KR_Finland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Finland_l_english.yml
@@ -2,12 +2,12 @@
 
 ### Parties ###
 FIN_market_liberal_party:0 "AP"
-FIN_market_liberal_party_long:0 "Agrarian Party"
+FIN_market_liberal_party_long:0 "농민당"
 FIN_social_conservative_party:0 "YFP"
-FIN_social_conservative_party_long:0 "Young Finnish Party"
+FIN_social_conservative_party_long:0 "핀란드청년당"
 
 ### Events ###
-findom.1.t:0 "The Death of Fredrik Kaarle I"
+findom.1.t:0 "프레드리크 카를레 1세의 훙"
 findom.1.d:0 "Place holder"
 findom.1.a:0 "Place holder"
 
