--- a/Kaiserreich Korean Translation/localisation/factions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/factions_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
- FACTION_LEADER:0 "Faction leader: §Y$COUNTRY$§!"
- FACTION_MEMBER:0 "Faction member: §Y$COUNTRY$§!"
+ FACTION_LEADER:0 "세력 대표: §Y$COUNTRY$§!"
+ FACTION_MEMBER:0 "세력 구성원: §Y$COUNTRY$§!"
  FACTION_NAME_GER_fascism:0 "추축국"
  FACTION_NAME_GER_none:0 "추축국"
- FACTION_NAME_IDEOLOGY_DEFAULT:0 "Supporters of $IDEOLOGY$"
+ FACTION_NAME_IDEOLOGY_DEFAULT:0 "$IDEOLOGY$ 지지자 모임"
  french_alliance:0 "프랑스 동맹국"
  the_berlin_moscow_axis:0 "베를린-모스크바 추측국"
- domination_francaise:0 "Domination Française"
+ domination_francaise:0 "프랑스 통치령"
  french_entente_alliance:0 "프랑스-협상 동맹국"
  daitoa_kyoeiken:0 "대동아공영권"
  italy_empire_faction:0 "신 로마 제국"
@@ -15,10 +15,10 @@
  Allies:0 "연합국"
  Axis:0 "추축국"
  Comintern:0 "코민테른"
- western_pacific_sphere:0 "Western Pacific Sphere"
- south_west_pacific_initiative:0 "The South-West Pacific Initiative"
+ western_pacific_sphere:0 "서태평양 공동체"
+ south_west_pacific_initiative:0 "남서태평양 자주연합"
  north_american_alliance:0 "북아메리카 동맹"
- northern_sovereignty_coalition:0 "Northern Sovereignty Coalition"
+ northern_sovereignty_coalition:0 "북부 주권 연합"
  SAF_faction_uotap:0 "아프리카 인민 연합 "
  ROM_BALKAN_FACTION:0 "부쿠레슈티 협정"
  HUN_BALKAN_FACTION:0 "발칸 조약"
